--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,10 @@ img {
     text-decoration: none;
 }
 
+.float-right-mob {
+    float: right !important;
+}
+
 
 /* FORMS */
 label {
@@ -1482,6 +1486,53 @@ header .btn {
 }
 
 
+/* MODALS */
+.modal-dialog {
+    max-width: 600px;
+}
+
+.modal-header {
+    display: block;
+}
+
+.modal-title {
+    text-align: center;
+    font-weight: 800;
+}
+
+.modal-numbers {
+    text-align: center;
+    position: relative;
+}
+
+.modal-numbers strong {
+    background-color: var(--brand-white);
+    z-index: 1;
+    position: relative;
+    padding: 0 1rem;
+    margin: 0.6rem 0;
+    display: inline-block;
+}
+
+.modal-numbers::after {
+    content: "";
+    background: var(--brand-black);
+    height: 1px;
+    width: 100%;
+    top: 50%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
+}
+
+.modal .close {
+    position: absolute;
+    top: 0.5rem;
+    right: 0.7rem;
+}
+
+
 /* PRE FOOTER */
 .pre-footer {
     margin-top: 110px;
@@ -1662,6 +1713,10 @@ header .btn {
     .text-center-mob {
         text-align: center;
     }
+
+    .float-right-mob {
+        float: left !important;
+    }
     
 }
 
@@ -1787,6 +1842,10 @@ header .btn {
     .pre-footer-col {
         padding-top: 50px;
         padding-bottom: 50px;
+    }
+
+    .order-xxs-0 {
+        order: 0;
     }
     
 }
