--- a/css/style.css
+++ b/css/style.css
@@ -951,6 +951,7 @@ header .btn {
     content: "\f138";
     font-weight: 600;
     opacity: 0.45;
+    font-size: 1.6rem;
 }
 
 .slick-prev:before {
@@ -958,6 +959,7 @@ header .btn {
     content: "\f137";
     font-weight: 600;
     opacity: 0.45;
+    font-size: 1.6rem;
 }
 
 .slick-dots {
@@ -1290,7 +1292,6 @@ header .btn {
     padding: 0px;
     width: 40px;
     height: 40px;
-    margin-left: 8px;
     transform: none;
 }
 
@@ -1381,6 +1382,7 @@ header .btn {
 
 .winners-text__quote {
     font-family: var(--font-unna);
+    font-style: italic;
     color: #8d8d8d;
     font-size: 2.4rem;
     line-height: 1.2;
@@ -1523,13 +1525,13 @@ header .btn {
 
 /* MODALS */
 .modal-dialog {
-    max-width: 600px;
+    max-width: 660px;
 }
 
 .modal-header {
     display: block;
-    padding-bottom: 0;
     border-bottom: 0 none;
+    padding: 2rem 1rem 0;
 }
 
 .modal-title {
@@ -1548,7 +1550,7 @@ header .btn {
     z-index: 1;
     position: relative;
     padding: 0 1rem;
-    margin: 0.6rem 0;
+    margin: 1.2rem 0 .8rem;
     display: inline-block;
 }
 
@@ -1566,11 +1568,18 @@ header .btn {
 
 .modal-footer {
     border-top: 0 none;
+    padding-bottom: 2rem;
 }
 
 .modal-footer .cancel {
     position: absolute;
     right: 0;
+    font-size: .8rem;
+}
+
+.modal-footer .fav-numbers {
+    position: absolute;
+    left: 0;
     font-size: .8rem;
 }
 
@@ -1909,6 +1918,15 @@ header .btn {
     .pre-footer-col {
         padding-top: 50px;
         padding-bottom: 50px;
+    }
+
+    .col-2.ticket-fields {
+        padding-left: 15px !important;
+        padding-right: 15px !important;
+    }
+
+    .modal-footer .fav-numbers {
+        max-width: 20%;
     }
 
     .order-xxs-0 {
