--- a/css/style-1.css
+++ b/css/style-1.css
@@ -8,196 +8,82 @@ p {
 }
 
 /* checkbox & radiobuttons */
-#checkboxes,
-#radiobuttons {
-  width: 30%;
-  height: 300px;
-  float: left;
+
+.switchToggle input[type=checkbox] {
+	height: 0; 
+	width: 0; 
+	visibility: hidden; 
+	position: absolute; 
 }
 
-input[type='checkbox'],
-input[type='radio'] {
-  display: none;
-  overflow: hidden;
-  clip: rect(0 0 0 0);
-  position: absolute;
-  height: 1px;
-  width: 1px;
-  margin: -1px;
-  padding: 0;
-  border: 0;
+.switchToggle label {
+	cursor: pointer; 
+	width: 54px; 
+	max-width: 54px; 
+	height: 26px; 
+	background: #d1d1d1; 
+	display: block; 
+	border-radius: 100px; 
+	position: relative; 
 }
 
-.checkbox, 
-.radiobutton {
-	display: inline-block;
-	position: relative;
-	height: 26px;
-	line-height: 26px;
-	width: 54px;
-	background: var(--brand-dark-gray);
-	z-index: 1;
+.switchToggle label:after {
+	content: ''; 
+	position: absolute; 
+	top: 2px; 
+	left: 2px; 
+	width: 22px; 
+	height: 22px; 
+	background: #fff; 
+	border-radius: 50%; 
+	transition: 0.3s; 
 }
 
-.checkbox::before, 
-.radiobutton::before, 
-.checkbox::after, 
-.radiobutton::after {
-	display: block;
-	position: absolute;
-	top: 0;
-	height: 100%;
-	width: 50%;
-	text-align: center;
-	text-transform: uppercase;
-	font-size: 12px;
-	z-index: 2;
-}
-.checkbox:before,
-.radiobutton:before {
-  left: 1px;
-  color: #fff;
+.switchToggle input:checked + label, 
+.switchToggle input:checked + input + label {
+	background: var(--brand-dark-gray); 
 }
 
-.checkbox:after,
-.radiobutton:after {
-  right: 1px;
-  color: #fff;
+.switchToggle input + label:before, 
+.switchToggle input + input + label:before {
+	content: 'NE'; 
+	position: absolute; 
+	top: 3px; 
+	left: 26px; 
+	width: 26px; 
+	height: 26px; 
+	transition: 0.3s; 
+	color: #fff; 
+	font-size: 14px;
 }
 
-.checkbox label, 
-.radiobutton label {
-	position: absolute;
-	display: block;
-	width: 20px;
-	height: 20px;
-	top: 3px;
-	left: 4px;
-	background: #fff;
-	border: 1px solid #fff;
-	cursor: pointer;
-	-webkit-transition: all 0.2s ease-in-out;
-	transition: all 0.2s ease-in-out;
-	z-index: 3;
-	margin-bottom: 0;
+.switchToggle input:checked + label:before, 
+.switchToggle input:checked + input + label:before {
+	content: 'DA'; 
+	position: absolute; 
+	top: 3px; 
+	left: 6px; 
+	width: 26px; 
+	height: 26px; 
+	transition: 0.3s; 
+	color: #fff; 
+	font-size: 14px;
 }
 
-.checkbox input[type="checkbox"]:checked + label, 
-.radiobutton input[type="radio"]:checked + label {
-	background: var(--brand-white);
-	border-color: var(--brand-white);
-	-webkit-transform: translate3d(26px, 0, 0);
-	transform: translate3d(26px, 0, 0);
+.switchToggle input:checked + label:after, 
+.switchToggle input:checked + input + label:after {
+	left: calc(100% - 2px); 
+	transform: translateX(-100%); 
 }
 
-.checkbox[data-style='slider'],
-.radiobutton[data-style='slider'] {
-  height: 10px;
-  line-height: 10px;
-  border-radius: 10px;
+.switchToggle label:active:after {
+	width: 60px; 
+} 
+
+.toggle-switchArea { 
+	margin: 10px 0 10px 0; 
 }
 
-.checkbox[data-style='slider'] label,
-.radiobutton[data-style='slider'] label {
-  width: 28px;
-  margin-top: -14px;
-  top: 50%;
-  left: 5px;
-  border-radius: 30px;
-}
-
-.checkbox[data-style='slider'] input[type='checkbox']:checked + label,
-.radiobutton[data-style='slider'] input[type='checkbox']:checked + label,
-.checkbox[data-style='slider'] input[type='radio']:checked + label,
-.radiobutton[data-style='slider'] input[type='radio']:checked + label {
-  -webkit-transform: translate3d(42px, 0, 0);
-          transform: translate3d(42px, 0, 0);
-}
-
-.checkbox[data-style='rounded'],
-.checkbox[data-style='rounded'] label,
-.radiobutton[data-style='rounded'],
-.radiobutton[data-style='rounded'] label {
-  border-radius: 30px;
-  margin-right: 20px;
-}
-
-.checkbox[data-style='square'],
-.checkbox[data-style='square'] label,
-.radiobutton[data-style='square'] label,
-.radiobutton[data-style='square'] {
-  border-radius: 3px;
-}
-
-.checkbox[data-label='on-off']:before,
-.radiobutton[data-label='on-off']:before {
-  content: 'on';
-}
-
-.checkbox[data-label='on-off']:after,
-.radiobutton[data-label='on-off']:after {
-  content: 'off';
-}
-
-
-.checkbox[data-label='yes-no']:before,
-.radiobutton[data-label='yes-no']:before {
-  content: 'DA';
-}
-
-.checkbox[data-label='yes-no']:after,
-.radiobutton[data-label='yes-no']:after {
-  content: 'NE';
-}
-
-.checkbox[data-style='slider']:before,
-.checkbox[data-style='slider']:before,
-.checkbox[data-label='none']:before,
-.checkbox[data-label='none']:before,
-.radiobutton[data-style='slider']:before,
-.radiobutton[data-style='slider']:before,
-.radiobutton[data-label='none']:before,
-.radiobutton[data-label='none']:before,
-.checkbox[data-style='slider']:after,
-.checkbox[data-style='slider']:after,
-.checkbox[data-label='none']:after,
-.checkbox[data-label='none']:after,
-.radiobutton[data-style='slider']:after,
-.radiobutton[data-style='slider']:after,
-.radiobutton[data-label='none']:after,
-.radiobutton[data-label='none']:after {
-  display: none;
-}
-
-#rb_bingo .checkbox input[type="checkbox"]:checked + label, 
-#rb_bingo .radiobutton input[type="radio"]:checked + label {
-	background: var(--brand-purple);
-	border-color: var(--brand-purple);
-}
-
-#rb_bingoPlus .checkbox input[type="checkbox"]:checked + label, 
-#rb_bingoPlus .radiobutton input[type="radio"]:checked + label {
-	background: var(--brand-light-blue-2);
-	border-color: var(--brand-light-blue-2);
-}
-
-.custom-checkbox {
-	cursor: pointer;
-}
-
-.custom-control-input:checked~.custom-control-label::before {
-	color: #fff;
-	border-color: var(--brand-black);
-	background-color: var(--brand-black);
-}
-
-.custom-checkbox .custom-control-label::before {
-	border-radius: 50%;
-}
-
-.custom-checkbox label::before {
-	border: 2px solid var(--brand-black);
-}
 /* checkbox & radiobuttons */
 
 /* MAIN BANNER >> */
@@ -723,6 +609,11 @@ input[type='radio'] {
 	font-size: 18px;
 }
 
+#bingo_price, 
+#bingo_plus_price {
+	margin-left: 20px;
+}
+
 .total-price {
 	margin-top: 15px;
 	font-size: 19px;
@@ -1066,19 +957,26 @@ button.regulations {
 
 
 .loto-banner {
-	background: linear-gradient(-215deg, var(--brand-red), var(--brand-red) 65%, #ba1521 65%, #ba1521 100%);
+	background: linear-gradient(-215deg, var(--brand-red), var(--brand-red) 50%, #ba1521 50%, #ba1521 100%);
 	margin-top: 100px;
-	padding: 20px 0;
+	padding: 60px 0;
 }
 
 .loto-banner__logo {
-	width: 150px;
-	margin-bottom: 30px;
+	width: 140px;
+	display: block;
+	margin: 0 auto 30px;
+}
+
+.loto-banner__text p {
+	font-weight: 600;
+	font-size: 20px;
+	margin-bottom: 15px;
 }
 
 .loto-banner__text h2 {
-	font-size: 57px;
-	font-weight: 700;
+	font-size: 80px;
+	font-weight: 900;
 }
 
 .loto-banner__text button {
@@ -1088,6 +986,13 @@ button.regulations {
 	font-size: 18px;
 	padding: 6px 30px;
 	border-radius: 4px;
+}
+
+.loto-banner__image img {
+	position: absolute;
+	right: 0;
+	top: -50px;
+	width: 300px;
 }
 
 .charity.charity--srecke,
