--- a/css/style-1.css
+++ b/css/style-1.css
@@ -9,6 +9,24 @@ p {
 
 /* checkbox & radiobuttons */
 
+.custom-checkbox {
+	cursor: pointer;
+}
+
+.custom-control-input:checked~.custom-control-label::before {
+	color: #fff;
+	border-color: var(--brand-black);
+	background-color: var(--brand-black);
+}
+
+.custom-checkbox .custom-control-label::before {
+	border-radius: 50%;
+}
+
+.custom-checkbox label::before {
+	border: 2px solid var(--brand-black);
+}
+
 .switchToggle input[type=checkbox] {
 	height: 0; 
 	width: 0; 
@@ -257,20 +275,14 @@ p {
 	fill: var(--brand-darker-gray);
 }
 
+.ticket-close:hover,
 .ticket-close.active {
 	background-color: var(--brand-black);
 }
 
-.ticket-close:hover {
-	background-color: var(--brand-darker-gray);
-}
-
+.ticket-close:hover .ticket-close__outline,
 .ticket-close.active .ticket-close__outline {
 	fill: var(--brand-black);
-}
-
-.ticket-close:hover .ticket-close__outline {
-	fill: var(--brand-darker-gray);
 }
 
 .ticket-close:hover .ticket-close__sign,
@@ -646,11 +658,6 @@ p {
 .draw-banner-tv img:first-child {
 	width: 180px;
 	margin-left: -50px;
-}
-
-.draw-banner-tv--loto img:first-child {
-	width: 80px;
-	margin-left: -70px;
 }
 
 .draw-banner-tv img:last-child {
